--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         environment:
             - PMA_HOST=${DB_HOST}
 
-    maildev:
-        image: djfarrelly/maildev
+    redis:
+        image: redis
         ports:
-            - ${MAILDEV_PORT}:80
+            - ${REDIS_PORT}:6379
